kube/registry/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-tls-ingress
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: docker-registry.dansteinke.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
  tls:
    - secretName: registry-tls
      hosts:
        - docker-registry.dansteinke.com
